--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step required'",
+    "vercel-build": "echo 'Building for vercel"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
@@ -23,6 +26,7 @@
     "multer": "^2.0.2",
     "nodemon": "^3.1.10",
     "razorpay": "^2.9.6",
+    "serverless-http": "^4.0.0",
     "validator": "^13.15.20"
   }
 }
